tests/sksl/errors/ReservedNameTypedef.glsl
### Compilation failed:

error: 1: 'typedef' is a reserved word
1 error
